Package and Typo fixes

--- a/package.json
+++ b/package.json
@@ -2,12 +2,14 @@
   "name": "wtwr",
   "private": true,
   "version": "0.0.0",
+  "homepage": "https://www.wtwrtoday.crabdance.com/",
   "type": "module",
   "scripts": {
     "dev": "vite --open",
     "build": "vite build",
     "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "deploy": "npm run build && scp -r ./dist/* seroujguidanian@wtwrtoday.crabdance.com:/home/seroujguidanian/frontend"
   },
   "dependencies": {
     "react": "^18.3.1",
