made changes to deploy scrpit src

--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "build": "vite build",
     "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview",
-    "deploy": "npm run build && scp -r ./dist/* seroujguidanian@wtwrtoday.crabdance.com:/home/seroujguidanian/frontend"
+   "deploy": "npm run build && scp -r ./dist/* seroujguidanian@wtwrtoday.crabdance.com:/var/www/wtwrtoday"
   },
   "dependencies": {
     "react": "^18.3.1",
