--- a/package.json
+++ b/package.json
@@ -9,8 +9,8 @@
     "build": "vite build",
     "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview",
-   "deploy": "npm run build && scp -r ./dist/* seroujguidanian@wtwrtoday.crabdance.com:/var/www/wtwrtoday"
-  },
+    "deploy": "npm run build && sudo rsync -av --delete dist/ /var/www/wtwrtoday/"
+    },
   "dependencies": {
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
